Debugged and added templates

--- a/login/signup/login/app/templates/base.html
+++ b/login/signup/login/app/templates/base.html
@@ -6,13 +6,13 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <ul>
             <li><a href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url 'signup' %}">Sign Up</a></li>
             <li><a href="{% url 'login' %}">Log In</a></li>
         </ul>
-    </nav>
+    </nav> -->
     <main>
         {% block content %}{% endblock %}
     </main>
